--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,6 +5,7 @@
 @import 'modules/loader';
 @import 'layouts/global';
 @import 'layouts/nav';
+@import 'layouts/contacto';
 @import 'layouts/footer';
 /*.woocommerce ul.products li.product, .woocommerce-page ul.products li.product {
 margin: 0 2.8% 2.992em 0;
