--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,54 +1,54 @@
 @font-face {
-  font-family: 'Oswald-regular';
-  src: url("../fonts/oswald-regular-webfont.eot");
+  font-family: 'montserrat-regular';
+  src: url("../fonts/montserrat-regular-webfont.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/oswald-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/oswald-regular-webfont.woff2") format("woff2"), url("../fonts/oswald-regular-webfont.woff") format("woff"), url("../fonts/oswald-regular-webfont.ttf") format("truetype"), url("../fonts/oswald-regular-webfont.svg#svgFontName") format("svg");
+  src: url("../fonts/montserrat-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-regular-webfont.woff2") format("woff2"), url("../fonts/montserrat-regular-webfont.woff") format("woff"), url("../fonts/montserrat-regular-webfont.ttf") format("truetype"), url("../fonts/montserrat-regular-webfont.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
 @font-face {
-  font-family: 'Oswald-light';
-  src: url("../fonts/oswald-light-webfont.eot");
+  font-family: 'montserrat-light';
+  src: url("../fonts/montserrat-light-webfont.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/oswald-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/oswald-light-webfont.woff2") format("woff2"), url("../fonts/oswald-light-webfont.woff") format("woff"), url("../fonts/oswald-light-webfont.ttf") format("truetype"), url("../fonts/oswald-light-webfont.svg#svgFontName") format("svg");
+  src: url("../fonts/montserrat-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-light-webfont.woff2") format("woff2"), url("../fonts/montserrat-light-webfont.woff") format("woff"), url("../fonts/montserrat-light-webfont.ttf") format("truetype"), url("../fonts/montserrat-light-webfont.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
 @font-face {
-  font-family: 'Oswald-heavy';
-  src: url("../fonts/oswald-heavy-webfont.eot");
+  font-family: 'montserrat-ultralight';
+  src: url("../fonts/montserrat-ultralight-webfont.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/oswald-heavy-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/oswald-heavy-webfont.woff2") format("woff2"), url("../fonts/oswald-heavy-webfont.woff") format("woff"), url("../fonts/oswald-heavy-webfont.ttf") format("truetype"), url("../fonts/oswald-heavy-webfont.svg#svgFontName") format("svg");
+  src: url("../fonts/montserrat-ultralight-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-ultralight-webfont.woff2") format("woff2"), url("../fonts/montserrat-ultralight-webfont.woff") format("woff"), url("../fonts/montserrat-ultralight-webfont.ttf") format("truetype"), url("../fonts/montserrat-ultralight-webfont.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
 @font-face {
-  font-family: 'Open-sans-regular';
+  font-family: 'fira-regular';
   src: url("../fonts/OpenSans-Regular-webfont.eot");
   /* IE9 Compat Modes */
   src: url("../fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Regular-webfont.woff") format("woff"), url("../fonts/OpenSans-Regular-webfont.ttf") format("truetype"), url("../fonts/OpenSans-Regular-webfont.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
 @font-face {
-  font-family: 'Oswald-regular';
-  src: url("../fonts/oswald-regular-webfont.eot");
+  font-family: 'montserrat-regular';
+  src: url("../fonts/montserrat-regular-webfont.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/oswald-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/oswald-regular-webfont.woff2") format("woff2"), url("../fonts/oswald-regular-webfont.woff") format("woff"), url("../fonts/oswald-regular-webfont.ttf") format("truetype"), url("../fonts/oswald-regular-webfont.svg#svgFontName") format("svg");
+  src: url("../fonts/montserrat-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-regular-webfont.woff2") format("woff2"), url("../fonts/montserrat-regular-webfont.woff") format("woff"), url("../fonts/montserrat-regular-webfont.ttf") format("truetype"), url("../fonts/montserrat-regular-webfont.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
 @font-face {
-  font-family: 'Oswald-light';
-  src: url("../fonts/oswald-light-webfont.eot");
+  font-family: 'montserrat-light';
+  src: url("../fonts/montserrat-light-webfont.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/oswald-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/oswald-light-webfont.woff2") format("woff2"), url("../fonts/oswald-light-webfont.woff") format("woff"), url("../fonts/oswald-light-webfont.ttf") format("truetype"), url("../fonts/oswald-light-webfont.svg#svgFontName") format("svg");
+  src: url("../fonts/montserrat-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-light-webfont.woff2") format("woff2"), url("../fonts/montserrat-light-webfont.woff") format("woff"), url("../fonts/montserrat-light-webfont.ttf") format("truetype"), url("../fonts/montserrat-light-webfont.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
 @font-face {
-  font-family: 'Oswald-heavy';
-  src: url("../fonts/oswald-heavy-webfont.eot");
+  font-family: 'montserrat-ultralight';
+  src: url("../fonts/montserrat-ultralight-webfont.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/oswald-heavy-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/oswald-heavy-webfont.woff2") format("woff2"), url("../fonts/oswald-heavy-webfont.woff") format("woff"), url("../fonts/oswald-heavy-webfont.ttf") format("truetype"), url("../fonts/oswald-heavy-webfont.svg#svgFontName") format("svg");
+  src: url("../fonts/montserrat-ultralight-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-ultralight-webfont.woff2") format("woff2"), url("../fonts/montserrat-ultralight-webfont.woff") format("woff"), url("../fonts/montserrat-ultralight-webfont.ttf") format("truetype"), url("../fonts/montserrat-ultralight-webfont.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
 @font-face {
-  font-family: 'Open-sans-regular';
+  font-family: 'fira-regular';
   src: url("../fonts/OpenSans-Regular-webfont.eot");
   /* IE9 Compat Modes */
   src: url("../fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Regular-webfont.woff") format("woff"), url("../fonts/OpenSans-Regular-webfont.ttf") format("truetype"), url("../fonts/OpenSans-Regular-webfont.svg#svgFontName") format("svg");
@@ -133,11 +133,11 @@ html, body {
   margin: 0; }
 
 body {
-  font-family: "Open-sans-regular", sans-serif;
+  font-family: "fira-regular", sans-serif;
   color: #2f3238; }
 
 h1, h2 {
-  font-family: "Oswald-regular", sans-serif; }
+  font-family: "montserrat-light", sans-serif; }
 
 blockquote, q {
   quotes: none; }
@@ -176,7 +176,7 @@ a {
   color: #008d94; }
 
 .navbar {
-  font-family: "Oswald-regular", sans-serif;
+  font-family: "montserrat-light", sans-serif;
   border: 0;
   margin: 0; }
   .navbar .navbar-header .navbar-toggle {
@@ -207,7 +207,7 @@ a {
   display: block; }
   .barra-iconos-top ul li a {
     transition: .3s ease-in-out all;
-    font-family: "Oswald-regular", sans-serif;
+    font-family: "montserrat-light", sans-serif;
     color: #666666;
     padding: 0 12px 0 40px;
     line-height: 32px;
@@ -343,22 +343,90 @@ hr {
   margin: 10px 0 10px 0;
   padding: 0; }
 
+.contacto #modalbox {
+  border-radius: 0;
+  opacity: 0.96; }
+
+.contacto #social-media ul {
+  list-style: none;
+  margin: 0 auto;
+  padding: 0;
+  display: block; }
+  .contacto #social-media ul li {
+    display: inline-block;
+    margin-right: 10px; }
+    .contacto #social-media ul li a:hover {
+      text-decoration: none; }
+    .contacto #social-media ul li span {
+      font-size: 25px; }
+
+.contacto .btn-contacto {
+  width: 100%;
+  margin: 25px 0;
+  border-radius: 0;
+  font-size: 15px;
+  font-weight: bold; }
+
+.contacto h3 {
+  letter-spacing: 5px;
+  font-weight: bold; }
+
+.wpcf7 {
+  text-align: center;
+  margin: 0 auto; }
+
+.wpcf7 textarea,
+.wpcf7 input {
+  width: 80%;
+  margin: 0 auto; }
+
+.wpcf7 {
+  margin: 0 auto;
+  text-align: center;
+  margin: 0 0 25px 0; }
+  .wpcf7 input[type=submit] {
+    margin: 10px;
+    width: 200px;
+    border: none;
+    height: 60px; }
+    .wpcf7 input[type=submit]:hover {
+      color: white; }
+  .wpcf7 textarea,
+  .wpcf7 input {
+    max-width: 500px; }
+
+#recaptcha {
+  width: 304px;
+  margin: 0 auto; }
+
+#recaptcha_area, #recaptcha_table {
+  margin: 0 auto !important; }
+
+.icon-facebook,
+.icon-twitter,
+.icon-instagram {
+  margin: 0 10px 0 0;
+  zoom: 1.3; }
+
 .site-footer {
-  background: #2f3238; }
+  background: #e3e3e3; }
   .site-footer ul {
     list-style-type: none;
     padding: 0; }
   .site-footer .footer-cam {
-    color: white;
+    color: #2f3238;
     padding: 20px 0 20px 0; }
+    .site-footer .footer-cam hr {
+      border-color: #666666; }
     .site-footer .footer-cam .footer-nav h5 {
       text-transform: uppercase;
-      padding-bottom: 10px; }
+      padding-bottom: 10px;
+      font-size: 16px; }
     .site-footer .footer-cam .footer-nav ul li {
       margin: 10px 0 0 0; }
       .site-footer .footer-cam .footer-nav ul li a {
-        font-family: "Oswald-regular", sans-serif;
-        font-size: 18px; }
+        font-family: "montserrat-light", sans-serif;
+        font-size: 16px; }
         .site-footer .footer-cam .footer-nav ul li a:hover {
           color: #e22980; }
   .site-footer .footer-estela {
