--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -1,26 +1,26 @@
 @font-face {
-  font-family: 'Oswald-regular';
-  src: url("../fonts/oswald-regular-webfont.eot");
+  font-family: 'montserrat-regular';
+  src: url("../fonts/montserrat-regular-webfont.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/oswald-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/oswald-regular-webfont.woff2") format("woff2"), url("../fonts/oswald-regular-webfont.woff") format("woff"), url("../fonts/oswald-regular-webfont.ttf") format("truetype"), url("../fonts/oswald-regular-webfont.svg#svgFontName") format("svg");
+  src: url("../fonts/montserrat-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-regular-webfont.woff2") format("woff2"), url("../fonts/montserrat-regular-webfont.woff") format("woff"), url("../fonts/montserrat-regular-webfont.ttf") format("truetype"), url("../fonts/montserrat-regular-webfont.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
 @font-face {
-  font-family: 'Oswald-light';
-  src: url("../fonts/oswald-light-webfont.eot");
+  font-family: 'montserrat-light';
+  src: url("../fonts/montserrat-light-webfont.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/oswald-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/oswald-light-webfont.woff2") format("woff2"), url("../fonts/oswald-light-webfont.woff") format("woff"), url("../fonts/oswald-light-webfont.ttf") format("truetype"), url("../fonts/oswald-light-webfont.svg#svgFontName") format("svg");
+  src: url("../fonts/montserrat-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-light-webfont.woff2") format("woff2"), url("../fonts/montserrat-light-webfont.woff") format("woff"), url("../fonts/montserrat-light-webfont.ttf") format("truetype"), url("../fonts/montserrat-light-webfont.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
 @font-face {
-  font-family: 'Oswald-heavy';
-  src: url("../fonts/oswald-heavy-webfont.eot");
+  font-family: 'montserrat-ultralight';
+  src: url("../fonts/montserrat-ultralight-webfont.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/oswald-heavy-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/oswald-heavy-webfont.woff2") format("woff2"), url("../fonts/oswald-heavy-webfont.woff") format("woff"), url("../fonts/oswald-heavy-webfont.ttf") format("truetype"), url("../fonts/oswald-heavy-webfont.svg#svgFontName") format("svg");
+  src: url("../fonts/montserrat-ultralight-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-ultralight-webfont.woff2") format("woff2"), url("../fonts/montserrat-ultralight-webfont.woff") format("woff"), url("../fonts/montserrat-ultralight-webfont.ttf") format("truetype"), url("../fonts/montserrat-ultralight-webfont.svg#svgFontName") format("svg");
   /* Legacy iOS */ }
 
 @font-face {
-  font-family: 'Open-sans-regular';
+  font-family: 'fira-regular';
   src: url("../fonts/OpenSans-Regular-webfont.eot");
   /* IE9 Compat Modes */
   src: url("../fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Regular-webfont.woff") format("woff"), url("../fonts/OpenSans-Regular-webfont.ttf") format("truetype"), url("../fonts/OpenSans-Regular-webfont.svg#svgFontName") format("svg");
@@ -47,34 +47,99 @@ div.pp_woocommerce .pp_close {
   text-align: center; }
 
 .woocommerce-content-cam {
-  padding-top: 40px; }
-  .woocommerce-content-cam label {
-    color: #2f3238; }
+  padding: 0 80px 0 80px; }
   @media handheld, only screen and (max-width: 768px) {
     .woocommerce-content-cam {
       padding: 0 10px 0 10px; } }
-  .woocommerce-content-cam ul.products li.product {
-    margin-bottom: 20px;
-    width: 13%;
-    display: inline-block;
-    vertical-align: top;
-    *display: inline;
-    *zoom: 1; }
-    @media handheld, only screen and (max-width: 768px) {
-      .woocommerce-content-cam ul.products li.product {
-        width: 45%; } }
-    .woocommerce-content-cam ul.products li.product a.button {
-      display: none; }
-    .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link span.price {
-      text-align: center; }
-      .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link span.price span.woocommerce-Price-amount span.woocommerce-Price-currencySymbol {
-        margin-right: 8px; }
-    .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
-      padding: 20px; }
-    .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3 {
-      text-align: center; }
+  @media only screen and (min-width: 769px) and (max-width: 1280px) {
+    .woocommerce-content-cam {
+      padding: 0 20px 0 20px; } }
+  .woocommerce-content-cam label {
+    color: #2f3238; }
+  .woocommerce-content-cam .woocommerce-breadcrumb {
+    margin: 0;
+    font-size: 1.1em; }
+    .woocommerce-content-cam .woocommerce-breadcrumb a:hover {
+      color: #e22980; }
+  .woocommerce-content-cam .woocommerce-result-count {
+    color: #a7a7a7;
+    font-size: 0.92em; }
+  .woocommerce-content-cam .wapl-flash {
+    top: -35px; }
+    @media only screen and (min-width: 1281px) {
+      .woocommerce-content-cam .wapl-flash {
+        top: -15px; } }
+    .woocommerce-content-cam .wapl-flash .woocommerce-advanced-product-label.product-label {
+      border-color: #e3e3e3;
+      width: 55px;
+      height: 55px; }
+  .woocommerce-content-cam .page-title,
+  .woocommerce-content-cam .woocommerce-ordering {
+    display: none; }
+  .woocommerce-content-cam ul.products {
+    padding: 40px 0 0 0; }
+    .woocommerce-content-cam ul.products li.product {
+      margin-bottom: 20px;
+      width: 13%;
+      display: inline-block;
+      vertical-align: top;
+      *display: inline;
+      *zoom: 1; }
+      @media handheld, only screen and (max-width: 768px) {
+        .woocommerce-content-cam ul.products li.product {
+          width: 45%; } }
+      @media only screen and (min-width: 769px) and (max-width: 1280px) {
+        .woocommerce-content-cam ul.products li.product {
+          margin-bottom: 5px; } }
+      @media only screen and (min-width: 1281px) {
+        .woocommerce-content-cam ul.products li.product {
+          margin-bottom: 0; } }
+      .woocommerce-content-cam ul.products li.product a.button {
+        display: none; }
+      .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link:hover h3 {
+        opacity: 1;
+        color: #008d94; }
+      .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link span.price {
+        display: none;
+        text-align: center; }
+        .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link span.price span.woocommerce-Price-amount span.woocommerce-Price-currencySymbol {
+          margin-right: 8px; }
+      .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3 {
+        position: relative;
+        top: -15px;
+        text-align: center;
+        width: 100%;
+        transition: .3s ease-in-out all;
+        padding: 0;
+        margin: 0;
+        opacity: 0;
+        font-size: 1.06em; }
+        @media handheld {
+          .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3 {
+            opacity: 1; } }
+        .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3 .touch {
+          opacity: 1; }
+        @media handheld, only screen and (max-width: 768px) {
+          .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3 {
+            font-size: 1.2em;
+            opacity: 1; } }
+        @media only screen and (min-width: 1281px) {
+          .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3 {
+            font-size: 1.4em;
+            top: -25px; } }
+      .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
+        padding: 20px; }
+        @media only screen and (min-width: 769px) and (max-width: 1280px) {
+          .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
+            padding: 10px; } }
+        @media only screen and (min-width: 1281px) {
+          .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
+            padding: 30px; } }
   .woocommerce-content-cam nav.woocommerce-pagination {
-    margin: 20px 0 30px 0; }
+    margin: 40px 0 30px 0; }
+    @media handheld, only screen and (max-width: 768px) {
+      .woocommerce-content-cam nav.woocommerce-pagination ul.page-numbers li span, .woocommerce-content-cam nav.woocommerce-pagination ul.page-numbers li a {
+        font-size: 20px; } }
   .woocommerce-content-cam div.images a.woocommerce-main-image {
     display: block;
     width: 60%;
