--- a/assets/scss/layouts/woocommerce.scss
+++ b/assets/scss/layouts/woocommerce.scss
@@ -97,7 +97,7 @@ div.pp_woocommerce .pp_close {
             }
             a.woocommerce-LoopProduct-link{
                 &:hover {
-                    h3{
+                    h3,h2{
                         opacity: 1;
                         color: $azul-cam;
                         }
@@ -123,7 +123,7 @@ div.pp_woocommerce .pp_close {
                     }
                 }
                 //Nombre del producto
-                h3{
+                h3,h2{
                     position: relative;
                     top: -15px;
                     text-align: center;
