--- a/assets/scss/layouts/woocommerce.scss
+++ b/assets/scss/layouts/woocommerce.scss
@@ -2,215 +2,10 @@
 @import '../partials/_media'; // Media Queries MQ(s,m,l,xl)
 @import '../partials/_mixins'; // centrado vertical/horizontal y fallback fuentes
 @import '../partials/_variables'; // colores, tipos de letra y personalizados
+@import 'woocommerce/global'; //Estilos globales
+@import 'woocommerce/gallery'; // Galerias y manejo de imagenes
+@import 'woocommerce/single-product'; //Single de productos
 
-.pp_pic_holder.pp_woocommerce {
-    overflow-x: visible;
-}
-
-div.pp_woocommerce a.pp_expand {
-    left: .5em !important;
-}
-
-div.pp_woocommerce .pp_close {
-    right: .5em !important;
-}
-.pp_gallery {
-    margin-top: -20px;
-    ul{
-        height: 100%;
-        a{
-            height: 100%;
-        }
-    }
-}
-
-.related.products {
-    clear: both;
-    text-align: center;
-}
-//contenedor de woocommerce
-.woocommerce-content-cam{
-    padding:0 80px 0 80px;
-    @include MQ(SM){
-        padding:0 10px 0 10px;
-    }
-    @include MQ(L){
-        padding:0 20px 0 20px;
-    }
-    label{
-        color: $gris-oscuro;
-    }
-    .woocommerce-breadcrumb{
-        margin: 0;
-        font-size: 1.1em;
-        a{
-            &:hover{
-                color:$rosa-cam;
-            }
-        }
-    }
-    //conteo de productos, mostrando X de X resultados x
-    .woocommerce-result-count{
-        color: #a7a7a7;
-        font-size:0.92em;
-    }
-    //Etiqueta de descuento
-    .wapl-flash {
-        top:-35px;
-        @include MQ(XL){
-            top:-15px;
-        }
-        .woocommerce-advanced-product-label.product-label{
-            border-color: $gris-superclaro;
-            width: 55px;
-            height: 55px;
-        }
-    }
-    //Titulo de la pagina, categoria de woo h1
-    .page-title,
-    //orden de los productos form
-    .woocommerce-ordering{
-        display: none;
-    }
-    //contenedor de productos pagina de archivo
-    ul.products{
-        padding: 40px 0 0 0;
-        //Producto especifico
-        li.product{
-            margin-bottom: 20px;
-            width: 13%;
-            display: inline-block;
-            vertical-align: top;
-            *display: inline;
-            *zoom: 1;
-            @include MQ(SM){
-                width: 45%;
-            }
-            @include MQ(L){
-                margin-bottom: 5px;
-            }
-            @include MQ(XL){
-                margin-bottom: 0;
-            }
-            a.button{// ajax boton anadir al carrito
-                display: none;
-            }
-            a.woocommerce-LoopProduct-link{
-                &:hover {
-                    h3,h2{
-                        opacity: 1;
-                        color: $azul-cam;
-                        }
-                    }
-                //Span aviso de oferta
-                span.onsale{
-                }
-                //Span de precios
-                span.price{
-                    display: none;
-                    text-align: center;
-                    //Precio de descuento
-                    del{
-                    }
-                    //Precio a pagar
-                    ins{
-                    }
-                    //Estos span estan dentro de las etiquetas del e ins anteriores
-                    span.woocommerce-Price-amount{
-                        span.woocommerce-Price-currencySymbol{
-                            margin-right: 8px;
-                        }
-                    }
-                }
-                //Nombre del producto
-                h3,h2{
-                    position: relative;
-                    top: -15px;
-                    text-align: center;
-                    width: 100%;
-                    transition: .3s ease-in-out all;
-                    padding: 0;
-                    margin: 0;
-                    opacity: 0;
-                    @media handheld{ opacity: 1;}
-                    .touch{ opacity: 1;}
-                    @include MQ(SM){
-                        font-size: 1.2em;
-                        opacity: 1;
-                    }
-                    @include MQ(XL){
-                        font-size: 1.4em;
-                        top: -25px;
-                    }
-                    font-size: 1.06em;
-                }
-                //imagen del producto
-                img.attachment-shop_catalog{
-                    padding: 20px;
-                    @include MQ(L){
-                        padding: 10px;
-                    }
-                    @include MQ(XL){
-                        padding: 30px;
-                    }
-                }
-            }
-        }
-    }
-    //Paginacion
-    nav.woocommerce-pagination{
-        margin: 40px 0 30px 0;
-        ul.page-numbers{
-            li{
-                span,a{
-                    @include MQ(SM){
-                        font-size: 20px;
-                    }
-                }
-            }
-        }
-    }
-    //Page single
-    div.images{
-        a.woocommerce-main-image {
-            display: block;
-            width: 60%;
-            margin: 0 auto;
-            @include MQ(S){
-                width: 80%;
-            }
-        }
-        div.thumbnails{
-            width: 60%;
-            margin: 0 auto;
-            @include MQ(S){
-                width: 80%;
-            }
-        }
-    }
-}
-.woocommerce #content div.product div.thumbnails a,
-.woocommerce div.product div.thumbnails a,
-.woocommerce-page #content div.product div.thumbnails a,
-.woocommerce-page div.product div.thumbnails a{
-    //margin: 0;
-    //float: none;
-}
-.woocommerce-page div.product div.summary{
-    margin: 50px 0 0 0;
-    //text-align: center;
-    form{
-        width: 200px;
-        //margin: 0 auto;
-        .button{
-                background: $azul-cam;
-                transition: ease-in-out 0.3s all;
-            &:hover{
-                background: $rosa-cam;
-            }
-        }
-    }
-}
 .woocommerce-product-gallery__image {
     max-width: 250px;
     margin: 0 auto;
