--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -28,11 +28,12 @@
 }
 @font-face{
     font-family: 'fira-regular';
-    src: url('../fonts/OpenSans-Regular-webfont.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/OpenSans-Regular-webfont.woff') format('woff'), /* Pretty Modern Browsers */
-       url('../fonts/OpenSans-Regular-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/OpenSans-Regular-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+    src: url('../fonts/firasans-regular-webfont.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/firasans-regular-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/firasans-regular-webfont.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/firasans-regular-webfont.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/firasans-regular-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/firasans-regular-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 $title-bold: 'montserrat-regular', sans-serif;
 $title-regular: 'montserrat-light', sans-serif;
