--- a/assets/scss/layouts/woocommerce.scss
+++ b/assets/scss/layouts/woocommerce.scss
@@ -5,8 +5,7 @@
 @import 'woocommerce/global'; //Estilos globales
 @import 'woocommerce/gallery'; // Galerias y manejo de imagenes
 @import 'woocommerce/single-product'; //Single de productos
-
-.woocommerce-product-gallery__image {
+/*.woocommerce-product-gallery__image {
     max-width: 250px;
     margin: 0 auto;
-}
+}*/
