--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -37,7 +37,7 @@
 }
 $title-bold: 'montserrat-regular', sans-serif;
 $title-regular: 'montserrat-light', sans-serif;
-$title-light: 'montserrat-ultralightlight', sans-serif;
+$title-light: 'montserrat-ultralight', sans-serif;
 $font-regular: 'fira-regular', sans-serif;
 $regular: 400;
 $bold:700;
