--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'layouts/nav';
 @import 'layouts/contacto';
 @import 'layouts/footer';
+@import 'layouts//woocommerce/carrito';
 /*.woocommerce ul.products li.product, .woocommerce-page ul.products li.product {
 margin: 0 2.8% 2.992em 0;
 width: 17.55%;
