--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -35,6 +35,17 @@
 
 .woocommerce-content-cam {
   padding: 0 80px 0 80px; }
+  .woocommerce-content-cam .woocommerce-message, .woocommerce-content-cam .woocommerce-error, .woocommerce-content-cam .woocommerce-info {
+    color: #666666; }
+    .woocommerce-content-cam .woocommerce-message a, .woocommerce-content-cam .woocommerce-error a, .woocommerce-content-cam .woocommerce-info a {
+      background: #008d94;
+      transition: ease-in-out 0.3s all;
+      border-radius: 0;
+      color: white;
+      font-weight: 400; }
+      .woocommerce-content-cam .woocommerce-message a:hover, .woocommerce-content-cam .woocommerce-error a:hover, .woocommerce-content-cam .woocommerce-info a:hover {
+        background: #e22980;
+        color: white; }
   @media handheld, only screen and (max-width: 768px) {
     .woocommerce-content-cam {
       padding: 0 10px 0 10px; } }
@@ -131,8 +142,8 @@
       .woocommerce-content-cam nav.woocommerce-pagination ul.page-numbers li span, .woocommerce-content-cam nav.woocommerce-pagination ul.page-numbers li a {
         font-size: 20px; } }
 
-.woocommerce button.button {
-  font-weight: 400; }
+.woocommerce button.button, a.button {
+  font-weight: 400 !important; }
 
 .pp_pic_holder.pp_woocommerce {
   overflow-x: visible; }
@@ -150,43 +161,89 @@ div.pp_woocommerce .pp_close {
     .pp_gallery ul a {
       height: 100%; }
 
-.single.single-product .woocommerce-content-cam div.images a.woocommerce-main-image {
-  display: block;
-  width: 60%;
-  margin: 0 auto; }
-  @media handheld, only screen and (max-width: 480px) {
-    .single.single-product .woocommerce-content-cam div.images a.woocommerce-main-image {
-      width: 80%; } }
+.single.single-product .woocommerce-content-cam div.imagenes a.woocommerce-main-image {
+  margin: 0 auto;
+  max-width: 460px; }
 
-.single.single-product .woocommerce-content-cam div.images div.thumbnails {
-  width: 60%;
-  margin: 0 auto; }
-  @media handheld, only screen and (max-width: 480px) {
-    .single.single-product .woocommerce-content-cam div.images div.thumbnails {
-      width: 80%; } }
+.single.single-product .woocommerce-content-cam div.imagenes div.thumb {
+  padding: 0; }
+  .single.single-product .woocommerce-content-cam div.imagenes div.thumb a {
+    width: 100%;
+    margin: 0;
+    float: none; }
+    @media handheld, only screen and (max-width: 768px) {
+      .single.single-product .woocommerce-content-cam div.imagenes div.thumb a {
+        width: 33%;
+        float: left; } }
 
 .single.single-product .woocommerce-content-cam .product_meta {
   display: none; }
 
-.single.single-product .woocommerce-content-cam div.product div.summary {
-  margin: 50px 0 0 0; }
+.single.single-product .woocommerce-content-cam div.related {
+  color: #666666;
+  padding: 32px 0 0 0; }
+  .single.single-product .woocommerce-content-cam div.related h2 {
+    border-top: 1px solid #e3e3e3;
+    border-bottom: 1px solid #e3e3e3; }
+  .single.single-product .woocommerce-content-cam div.related ul.products {
+    padding: 0; }
+
+.single.single-product .woocommerce-content-cam div.upsells {
+  color: #666666;
+  padding: 32px 0 0 0; }
   @media handheld, only screen and (max-width: 768px) {
-    .single.single-product .woocommerce-content-cam div.product div.summary {
+    .single.single-product .woocommerce-content-cam div.upsells {
       text-align: center; } }
-  .single.single-product .woocommerce-content-cam div.product div.summary form {
+  .single.single-product .woocommerce-content-cam div.upsells ul.products {
+    padding: 10px 0 0 0; }
+    .single.single-product .woocommerce-content-cam div.upsells ul.products a {
+      padding: 15px 5px 5px 5px;
+      position: relative; }
+      .single.single-product .woocommerce-content-cam div.upsells ul.products a img {
+        transition: all .4s ease-in-out;
+        padding: 5px; }
+      .single.single-product .woocommerce-content-cam div.upsells ul.products a:hover img {
+        -webkit-transform: scale(1.2) rotate(-180deg);
+        -moz-transform: scale(1.2) rotate(-180deg);
+        -ms-transform: scale(1.2) rotate(-180deg);
+        -o-transform: scale(1.2) rotate(-180deg);
+        transform: scale(1.2) rotate(-180deg); }
+
+@media handheld, only screen and (max-width: 768px) {
+  .single.single-product .woocommerce-content-cam div.product div.sumario {
+    text-align: center;
+    clear: both; } }
+
+.single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario {
+  margin: 40px 0 0 0; }
+  .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario h1.product_title {
+    font-family: "montserrat-ultralight", sans-serif;
+    font-size: 42px;
+    font-weight: 400; }
+  .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario .price span {
+    color: #008d94;
+    font-size: 24px; }
+    .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario .price span .woocommerce-Price-currencySymbol {
+      margin-right: 10px;
+      color: #666666;
+      font-size: 18px; }
+  .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario p.stock {
+    color: #008d94; }
+  .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form {
     width: 200px; }
     @media handheld, only screen and (max-width: 768px) {
-      .single.single-product .woocommerce-content-cam div.product div.summary form {
+      .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form {
         margin: 0 auto; } }
-    .single.single-product .woocommerce-content-cam div.product div.summary form .quantity .qty {
+    .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form .quantity .qty {
       height: 30px; }
-    .single.single-product .woocommerce-content-cam div.product div.summary form .button {
+    .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form .button {
       background: #008d94;
       transition: ease-in-out 0.3s all;
       border-radius: 0; }
-      .single.single-product .woocommerce-content-cam div.product div.summary form .button:hover {
+      .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form .button:hover {
         background: #e22980; }
 
-.woocommerce-product-gallery__image {
-  max-width: 250px;
-  margin: 0 auto; }
+/*.woocommerce-product-gallery__image {
+    max-width: 250px;
+    margin: 0 auto;
+}*/
