--- a/assets/scss/layouts/woocommerce/global.scss
+++ b/assets/scss/layouts/woocommerce/global.scss
@@ -7,6 +7,20 @@
 //Estilos Generales paginas de Archivo
 //contenedor de woocommerce
 .woocommerce-content-cam{
+    .woocommerce-message,.woocommerce-error, .woocommerce-info{
+        color: $gris-claro;
+        a{
+            background: $azul-cam;
+            transition: ease-in-out 0.3s all;
+            border-radius: 0;
+            color: $white;
+            font-weight: 400;
+            &:hover{
+                background: $rosa-cam;
+                color: $white;
+            }
+        }
+    }
     padding:0 80px 0 80px;
     @include MQ(SM){
         padding:0 10px 0 10px;
@@ -152,6 +166,6 @@
     }
 }
 //Todos los botones de woo
-.woocommerce button.button{
-    font-weight: 400;
+.woocommerce button.button,a.button{
+    font-weight: 400 !important;
 }
