--- a/assets/scss/layouts/woocommerce/single-product.scss
+++ b/assets/scss/layouts/woocommerce/single-product.scss
@@ -1,4 +1,4 @@
-        //Pagina single de productos
+//Pagina single de productos
 .single.single-product {
     //Conetenedor de woocommerce
     .woocommerce-content-cam {
@@ -6,29 +6,86 @@
         .product_meta {
             display: none;
         }
-        //Datos del producto
-        div.product div.summary {
-            margin: 50px 0 0 0;
+        div.related {
+            color: $gris-claro;
+            padding: 32px 0 0 0;
+            h2 {
+                border-top: 1px solid $gris-superclaro;
+                border-bottom: 1px solid $gris-superclaro;
+            }
+            ul.products {
+                padding: 0;
+            }
+        }
+        div.upsells,
+        {
+            color: $gris-claro;
+            padding: 32px 0 0 0;
             @include MQ(SM) {
                 text-align: center;
             }
-            form {
-                width: 200px;
-                @include MQ(SM) {
-                    //text-align: center;
-                    margin: 0 auto;
-                }
-                .quantity {
-                    .qty {
-                        height: 30px;
+            ul.products {
+                padding: 10px 0 0 0;
+                a {
+                    padding: 15px 5px 5px 5px;
+                    position: relative;
+                    img {
+                        transition: all .4s ease-in-out;
+                        padding: 5px;
+                    }
+                    &:hover img {
+                        @include transform(scale(1.2) rotate(-180deg));
                     }
                 }
-                .button {
-                    background: $azul-cam;
-                    transition: ease-in-out 0.3s all;
-                    border-radius: 0;
-                    &:hover {
-                        background: $rosa-cam;
+            }
+        }
+        //Datos del producto
+        div.product div.sumario {
+            @include MQ(SM) {
+                text-align: center;
+                clear: both;
+            }
+            //envoltorio del sumario
+            .wrap-sumario {
+                margin: 40px 0 0 0;
+                h1.product_title {
+                    font-family: $title-light;
+                    font-size: 42px;
+                    font-weight: 400;
+                }
+                .price {
+                    span {
+                        color: $azul-cam;
+                        font-size: 24px;
+                        .woocommerce-Price-currencySymbol {
+                            margin-right: 10px;
+                            color: $gris-claro;
+                            font-size: 18px;
+                        }
+                    }
+                }
+                div.description {}
+                p.stock {
+                    color: $azul-cam;
+                }
+                form {
+                    width: 200px;
+                    @include MQ(SM) {
+                        //text-align: center;
+                        margin: 0 auto;
+                    }
+                    .quantity {
+                        .qty {
+                            height: 30px;
+                        }
+                    }
+                    .button {
+                        background: $azul-cam;
+                        transition: ease-in-out 0.3s all;
+                        border-radius: 0;
+                        &:hover {
+                            background: $rosa-cam;
+                        }
                     }
                 }
             }
