--- a/assets/scss/layouts/woocommerce.scss
+++ b/assets/scss/layouts/woocommerce.scss
@@ -4,6 +4,7 @@
 @import '../partials/_variables'; // colores, tipos de letra y personalizados
 @import 'woocommerce/global'; //Estilos globales
 @import 'woocommerce/gallery'; // Galerias y manejo de imagenes
+@import 'woocommerce/nav'; //Single de productos
 @import 'woocommerce/single-product'; //Single de productos
 /*.woocommerce-product-gallery__image {
     max-width: 250px;
