--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,12 @@ a, a:hover {
 a {
   color: #008d94; }
 
+.contacto-visible {
+  display: none; }
+
+.nav-principal-cam .contacto-visible {
+  display: block; }
+
 .navbar {
   font-family: "montserrat-light", sans-serif;
   border: 0;
@@ -201,61 +207,6 @@ a {
 @media only screen and (min-width: 768px) {
   #logo-principal h1 {
     margin-top: 0; } }
-
-.barra-iconos-top {
-  padding: 10px 0 0 0;
-  display: block; }
-  .barra-iconos-top ul li a {
-    transition: .3s ease-in-out all;
-    font-family: "montserrat-light", sans-serif;
-    color: #666666;
-    padding: 0 12px 0 40px;
-    line-height: 32px;
-    background: transparent;
-    font-size: 14px;
-    text-transform: capitalize; }
-    .barra-iconos-top ul li a:hover {
-      color: #e22980;
-      background: transparent; }
-  .barra-iconos-top ul .icon-session a:before,
-  .barra-iconos-top ul .icon-cart a:before {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 32px;
-    height: 32px;
-    padding: 2px;
-    transition: .3s ease-in-out all; }
-  .barra-iconos-top ul .cart-cuenta {
-    padding: 0; }
-    .barra-iconos-top ul .cart-cuenta .woocommerce-Price-currencySymbol {
-      margin: 0 5px 0 0; }
-    .barra-iconos-top ul .cart-cuenta .numero-cuenta {
-      display: inline-block;
-      width: 30px;
-      height: 30px;
-      border: 1px solid #2f3238;
-      border-radius: 50%;
-      text-align: center;
-      transition: .3s ease-in-out all; }
-    .barra-iconos-top ul .cart-cuenta:hover .numero-cuenta {
-      background: #008d94;
-      color: white;
-      border: 1px solid white; }
-  .barra-iconos-top ul .icon-session a:before {
-    background: url("../img/usuario-icono.png") center no-repeat;
-    background-size: contain; }
-  .barra-iconos-top ul .icon-session a:hover:before {
-    background: url("../img/usuario-icono-hover.png") center no-repeat;
-    background-size: contain; }
-  .barra-iconos-top ul .icon-cart a:before {
-    background: url("../img/carrito-icono.png") center no-repeat;
-    background-size: contain; }
-  .barra-iconos-top ul .icon-cart a:hover:before {
-    background: url("../img/carrito-icono-hover.png") center no-repeat;
-    background-size: contain; }
 
 /*
 HOVERNAV
