--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -176,6 +176,76 @@ div.pp_woocommerce .pp_close {
         width: 33%;
         float: left; } }
 
+.woocommerce-content-cam .term-description {
+  color: #a7a7a7;
+  font-size: 0.92em;
+  display: none; }
+
+.woocommerce-content-cam .woo-help-nav {
+  padding: 0;
+  margin: 0 0 10px 0; }
+  .woocommerce-content-cam .woo-help-nav .nav-item {
+    margin: 0;
+    padding: 0; }
+  @media handheld, only screen and (max-width: 768px) {
+    .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul {
+      margin-top: 15px;
+      text-align: center;
+      float: none; } }
+  .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul li {
+    display: inline-block; }
+    .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul li a {
+      transition: .3s ease-in-out all;
+      font-family: "montserrat-light", sans-serif;
+      color: #666666;
+      padding: 0 12px 0 25px;
+      line-height: 22px;
+      background: transparent;
+      font-size: 14px;
+      text-transform: capitalize; }
+      .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul li a:hover {
+        color: #e22980;
+        background: transparent; }
+  .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul .icon-session a:before,
+  .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul .icon-cart a:before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 22px;
+    height: 22px;
+    padding: 4px;
+    transition: .3s ease-in-out all; }
+  .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul .cart-cuenta {
+    padding: 0; }
+    .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul .cart-cuenta .woocommerce-Price-currencySymbol {
+      margin: 0 5px 0 0; }
+    .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul .cart-cuenta .numero-cuenta {
+      display: inline-block;
+      width: 22px;
+      height: 22px;
+      border: 1px solid #2f3238;
+      border-radius: 50%;
+      text-align: center;
+      transition: .3s ease-in-out all; }
+    .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul .cart-cuenta:hover .numero-cuenta {
+      background: #008d94;
+      color: white;
+      border: 1px solid white; }
+  .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul .icon-session a:before {
+    background: url("../img/usuario-icono.png") center no-repeat;
+    background-size: contain; }
+  .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul .icon-session a:hover:before {
+    background: url("../img/usuario-icono-hover.png") center no-repeat;
+    background-size: contain; }
+  .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul .icon-cart a:before {
+    background: url("../img/carrito-icono.png") center no-repeat;
+    background-size: contain; }
+  .woocommerce-content-cam .woo-help-nav .barra-iconos-top ul .icon-cart a:hover:before {
+    background: url("../img/carrito-icono-hover.png") center no-repeat;
+    background-size: contain; }
+
 .single.single-product .woocommerce-content-cam .product_meta {
   display: none; }
 
