--- a/assets/scss/layouts/footer.scss
+++ b/assets/scss/layouts/footer.scss
@@ -1,5 +1,5 @@
 .site-footer{
-    background: $gris-superclaro;
+    background: $gris-footer;
     ul{
         list-style-type: none;
         padding: 0;
