--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -46,6 +46,7 @@ $bold:700;
 $gris-oscuro: #2f3238;
 $gris-claro: #666666;
 $gris-superclaro: #e3e3e3;
+$gris-footer: #f7f7f7;
 $rosa-cam: #e22980;
 $azul-cam: #008d94;
 $white: white;
