--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,7 +361,7 @@ hr {
   zoom: 1.3; }
 
 .site-footer {
-  background: #e3e3e3; }
+  background: #f7f7f7; }
   .site-footer ul {
     list-style-type: none;
     padding: 0; }
