--- a/assets/scss/layouts/woocommerce.scss
+++ b/assets/scss/layouts/woocommerce.scss
@@ -1,4 +1,4 @@
-@import 'bourbon';
+@import "node_modules/bourbon/app/assets/stylesheets/bourbon";//bourbon
 @import '../partials/_media'; // Media Queries MQ(s,m,l,xl)
 @import '../partials/_mixins'; // centrado vertical/horizontal y fallback fuentes
 @import '../partials/_variables'; // colores, tipos de letra y personalizados
@@ -6,7 +6,3 @@
 @import 'woocommerce/gallery'; // Galerias y manejo de imagenes
 @import 'woocommerce/nav'; //Single de productos
 @import 'woocommerce/single-product'; //Single de productos
-/*.woocommerce-product-gallery__image {
-    max-width: 250px;
-    margin: 0 auto;
-}*/
